--- a/.github/workflows/run-googletests.yml
+++ b/.github/workflows/run-googletests.yml
@@ -17,6 +17,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Print working directory
+      run: |
+        pwd
+        ls -R
+
     # Step 2: Install dependencies
     - name: Install dependencies
       run: sudo apt-get update && sudo apt-get install -y build-essential cmake
