--- a/.github/workflows/tmp-run-googletests.yml
+++ b/.github/workflows/tmp-run-googletests.yml
@@ -29,6 +29,7 @@ jobs:
     # Step 3: Configure and build the project
     - name: Configure and build
       run: |
+        cd ${{ github.workspace }}
         mkdir -p build
         cd build
         cmake ..
