--- a/.github/workflows/update-version-on-master.yml
+++ b/.github/workflows/update-version-on-master.yml
@@ -25,8 +25,8 @@ jobs:
     # Step 3: Update version in CMakeLists.txt
     - name: Update version
       run: |
-        # Extract the current version
-        current_version=$(grep -Po '(?<=project\(.* VERSION )\d+\.\d+\.\d+' CMakeLists.txt)
+        # Extract the current version using sed
+        current_version=$(sed -n 's/.*VERSION \([0-9]*\.[0-9]*\.[0-9]*\).*/\1/p' CMakeLists.txt)
         echo "Current version: $current_version"
 
         # Increment the patch version
