Initial commit with new files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,4 @@ include(CTest)
 # Add all sub directories
 add_subdirectory(external)
 add_subdirectory(circularBufferStatic)
+add_subdirectory(circularBufferDynamic)
