--- a/circularBufferStatic/gtests/CMakeLists.txt
+++ b/circularBufferStatic/gtests/CMakeLists.txt
@@ -1,25 +1,20 @@
-if (BUILD_TESTING)
-    # Include the circularBufferStatic library
-    include_directories(${CMAKE_SOURCE_DIR}/circularBufferStatic)
+# Setup test executable
+add_executable(circularBufferStaticTests 
+    circularBufferStaticTests.cpp
+)
 
-    set(SOURCES
-        circularBufferStaticTests.cpp
-    )
-
-    # Setup test executable
-    add_executable(circularBufferStaticTests 
-        ${SOURCES}
-    )
-    
-    target_link_libraries(circularBufferStaticTests PUBLIC 
+target_link_libraries(circularBufferStaticTests 
+    PUBLIC 
         GTest::gtest_main
         circularBufferStatic
-    )
+)
 
-    # Include gtest and all tests in executable
-    # Include GoogleTest module to enable test discovery and integration
-    include (GoogleTest)
-    gtest_discover_tests(circularBufferStaticTests)
+target_include_directories(circularBufferStaticTests
+    PRIVATE
+        ${PROJECT_SOURCE_DIR}/circularBufferStatic
+)
 
-    
-endif()
+# Include gtest and all tests in executable
+# Include GoogleTest module to enable test discovery and integration
+include (GoogleTest)
+gtest_discover_tests(circularBufferStaticTests)
